[package]
name = "log_kv"
description = "A hashmap backed by a log of inserts. The log is read at initialisation to rebuild the hashmap"
readme = "README.md"
keywords = ["key-value", "kv", "disk", "hashmap", "database"]
categories = ["database", "database-implementations"]
repository = "http://github.com/sjmelia/log-kv"
license = "MIT"
version = "0.1.0"
authors = ["Steve Melia <steve.j.melia@gmail.com>"]

[dependencies]
bincode = "0.6.1"
serde = "0.8.23"
